--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style/style.css">
 
-    <!--This is a comment-->
+    <!--This is a comment nerds-->
 
     <script src="bower_components/three.js/build/three.js"></script>
 
