--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
 
     <!--This is a comment for testings-->
+    <!--
+
+
+
+
+
+
+    ░░░░░░░░░▓▓▓▓▀█░░░░░░░░░░░░░
+    ░░░░░░▄▀▓▓▄██████▄░░░░░░░░░░
+    ░░░░░▄█▄█▀░░▄░▄░█▀░░░░░░░░░░
+    ░░░░▄▀░██▄░░▀░▀░▀▄░░░░░░░░░░
+    ░░░░▀▄░░▀░▄█▄▄░░▄█▄░░░░░░░░░
+    ░░░░░░▀█▄▄░░▀▀▀█▀░░░░░░░░░░░
+    ░░░░░░█░░░░░░░░▄▀▀░▐░░░░░░░░
+    ░░░░▄▀░░░░░░░░▐░▄▄▀░░░░░░░░░
+    ░░▄▀░░░▐░░░░░█▄▀░▐░░░░░░░░░░
+    ░░█░░░▐░░░░░░░░▄░█░░░░░░░░░░
+    ░░░█▄░░▀▄░░░░▄▀▐░█░░░░░░░░░░
+    ░░░█▐▀▀▀░▀▀▀▀░░▐░█░░░░░░░░░░
+    ░░▐█▐▄░░▀░░░░░░▐░█▄▄░░░░░░░░
+    ░░░▀▀░MODS░░░░▐▄▄▄▀░░░░░░░░░
+
+
+
+    -->
 
     <script src="bower_components/three.js/build/three.js"></script>
 
